[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commondata/ee"]

[project]
name = 'commondata-ee'
version = '0.0.4'
description = "Common data about Estonia"

# scripts = ['eidreader.py']

dependencies = ['commondata']

# scripts=['synodal.py']
readme = "README.rst"
# py_modules = ['synodal']

license = {file = "COPYING"}
authors = [
  {name='Rumma & Ko Ltd', email="info@saffre-rumma.net"},
  {name='Luc Saffre', email="luc@lino-framework.org"},
  {name='Sharif Mehedi', email="sharifmehedi24@gmail.com"},
]

classifiers= [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://dev.lino-framework.org/topics/commondata.html"
Repository = "https://github.com/lsaffre/commondata-ee"
